main_stack.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'My AWS CloudFormation. This example creates an auto scaling group behind a load balancer (reference from a different stack)
              The ELB puts access logs into an S3 bucket.'
Parameters:
  NetworkStackName:
    Description: Name of an active CloudFormation stack that contains the ELB
    Type: String
    Default: ELB-mzol
    MinLength: 1
    MaxLength: 255
    AllowedPattern: "^[a-zA-Z][-a-zA-Z0-9]*$"
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: MyWebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
    - t2.micro
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

Mappings:
  AWSInstanceType2Arch:
    t2.micro:
      Arch: HVM64
  AWSInstanceType2NATArch:
    t2.micro:
      Arch: NATHVM64
  AWSRegionArch2AMI:
    us-east-1:
      HVM64: ami-04681a1dbd79675a5

Resources:
# AutoScaling config
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !GetAZs ''
      LaunchConfigurationName: !Ref 'LaunchConfig'
      MinSize: '0'
      MaxSize: '2'
      LoadBalancerNames:
        - Fn::ImportValue: !Sub "${NetworkStackName}-MyELB"
          
# LaunchConfig config
  LaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName: !Ref 'KeyName'
      ImageId: !FindInMap [AWSRegionArch2AMI, !Ref 'AWS::Region', !FindInMap [AWSInstanceType2Arch,
          !Ref 'InstanceType', Arch]]
      InstanceType: !Ref 'InstanceType'
      SecurityGroups: [!Ref 'MySecurityGroup']
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum -y update
          yum -y install httpd
          PrivateIP=`curl http://169.254.169.254/latest/meta-data/local-ipv4`
          instance=`curl http://169.254.169.254/latest/meta-data/instance-id`
          region=`curl -s http://169.254.169.254/latest/dynamic/instance-identity/document | awk -F\" '/region/ {print $4}'`
          hostnamectl set-hostname qa-web-$instance.$region.amazonaws.com
          echo -e "Web Server with $PrivateIP \nName - \"$(hostname)\" " > /var/www/html/index.html
          sudo service httpd start
          chkconfig httpd on

# Config for SecurityGroup
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription:  Enable SSH access and HTTP access via port 80 and 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: !Ref 'SSHLocation'
      Tags:
      - Key: Name
        Value: 'http-ssh'
